output/illustrative_examples/additional1_CF/explanation_from_other_techniques/explanation_PEM_3.12.txt
line 6
    if k==0||j==k:
            ^
SyntaxError: invalid syntax